--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0",
-    "bootstrap-vue": "^2.0.0-rc.11",
+    "@nuxtjs/pwa": "^2.6.0",
     "bootstrap": "^4.1.3",
-    "@nuxtjs/pwa": "^2.6.0"
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "cross-env": "^5.2.0",
+    "normalize.css": "^8.0.1",
+    "nuxt": "^2.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
