--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-brands-svg-icons": "^5.8.1",
+    "@fortawesome/free-regular-svg-icons": "^5.8.1",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/style-resources": "^0.1.2",
     "bootstrap": "^4.1.3",
@@ -19,6 +24,8 @@
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.4.0",
+    "nuxt-fontawesome": "^0.4.0",
+    "nuxt-webfontloader": "^1.0.0",
     "sass-loader": "^7.1.0"
   },
   "devDependencies": {
