--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "nuxt": "^2.4.0",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-webfontloader": "^1.0.0",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "sass-mq": "^5.0.0",
+    "vue-mq": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
