--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nuxt-webfontloader": "^1.0.0",
     "sass-loader": "^7.1.0",
     "sass-mq": "^5.0.0",
+    "vue-carousel": "^0.18.0",
     "vue-mq": "^1.0.1"
   },
   "devDependencies": {
